# sonmap-studio

./: .env.example  .gitignore  Analysis_Preview_Map_Workflow.md  MIGRATION_GEOJSON_TO_POSTGIS.md  README.md  STORE_REDESIGN.md  URGENT_TODOS.md  code_files_list.txt  db_logs.txt  env.mjs  eslint.config.js  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  preview-map-optimization.md  test-coords.js  test-coords.ts  tsconfig.json
app/: README.md  actions.ts  globals.css  layout.tsx  page.tsx
bug_track/: DEVELOPMENT_TRACKER.md  FLOW_DIAGRAMS.md  README.md  UPDATE_TRACKER.md  URGENT_TODOS.md  debug-instructions.md  debug-tracker.md  version_history.md
components/: MapLayer.tsx  README.md  error-boundary.tsx  form-message.tsx  header-auth.tsx  header.tsx  submit-button.tsx  theme-switcher.tsx
components/geo-loader/core/processors/implementations/shapefile/wasm/: Cargo.toml  README.md  build.js
components/geo-loader/core/processors/implementations/shapefile/wasm/src/: README.md  geojson.rs  geometry.rs  lib.rs  validation.rs
docs/: GEODATA-IMPORT-REFACTOR-V2.md  GEODATA-IMPORT-REFACTOR.md  LOGGING-BEST-PRACTICES.md  README.md  SUPABASE-CLIENT-REFACTOR.md  component-redundancy-analysis.md  data-import-analysis.md  div_implementations.md  geo-import-component.md  preview-map-component.md  redundancy-cleanup-progress.md  refactor-remove-mapbox-2d.md  shapefile-import-flow.md  shapefile-importer-analysis.md  shapefile-processing-flow.md
hooks/: useUserSettings.ts
lib/: README.md  api-client.ts  coordinate-systems.ts  imports.ts  (+1 more)
(+941 files in other folders)
